<resources>
    <string name="user_name">닉네임</string>
    <string name="user_name_hint">닉네임을 입력해주세요.</string>
    <string name="user_name_error">입력한 닉네임은 사용할 수 없습니다.</string>
    <string name="user_name_correct">사용 가능한 닉네임입니다.</string>
    <string name="user_name_tip">한잔에서 사용할 닉네임이며, 추후 변경이 가능합니다.\n한글/영문/특수문자(., -, _)로 구성해주세요.</string>
    <string name="user_age">나이</string>
    <string name="user_age_20">20~29</string>
    <string name="user_age_30">30~39</string>
    <string name="user_age_40">40~49</string>
    <string name="user_age_50">50~59</string>
    <string name="user_age_60over">60세 이상</string>
    <string name="navigate_to_sbti_tip">술BTI 검사하러 가기!</string>
    <string name="sbti">술BTI 검사</string>
    <string name="sbti_tip1">총 검사 시간은 5분 내외입니다.</string>
    <string name="sbti_tip2">검사 결과를 토대로 좋아하실만한 품목을 추천해드려요.</string>
    <string name="sbti_tip3">솔직하게 답변해주세요.</string>
    <string name="sbti_tip4">재미로만 즐겨주세요.</string>
    <string name="navigate_to_sbti">시작!</string>
    <string name="sbti_question_1">술집에 갔을 때 가장 먼저 보는 것은?</string>
    <string name="sbti_answer_1_1">술 리스트</string>
    <string name="sbti_answer_1_2">안주 리스트</string>
    <string name="sbti_question_2">오늘 편의점에 갔더니 못 보던 새로운 술이 나왔다.\n당신의 선택은?</string>
    <string name="sbti_answer_2_1">무슨 상관이야.. 늘 먹던 걸로 먹자.</string>
    <string name="sbti_answer_2_2">궁금하니까 한 번 먹어봐야지!</string>
    <string name="sbti_question_3">오늘은 불타는 금요일!\n한잔 시원하게 하자는 친구와 함께 하는 곳은?</string>
    <string name="sbti_answer_3_1">조용하고 아늑한 단골 술집</string>
    <string name="sbti_answer_3_2">활기차고 에너지 넘치는 유명 술집</string>
    <string name="sbti_question_4">오늘은 정말로 기분이 안 좋다.\n친구가 한잔 하자며 나오라고 한다면?</string>
    <string name="sbti_answer_4_1">오늘은 집에서 쉴래..</string>
    <string name="sbti_answer_4_2">아, 화나니까 술이나 적셔!!</string>
    <string name="sbti_question_5">술이 먹고 싶은데 같이 마실 사람이 없다.\n당신은 어떻게 할 것인가?</string>
    <string name="sbti_answer_5_1">집에서 혼자 마시지 뭐.</string>
    <string name="sbti_answer_5_2">술은 다음에 마셔야겠다.</string>
    <string name="sbti_question_6">평소에 술을 마시는 곳은 주로 어디인가요?</string>
    <string name="sbti_answer_6_1">집</string>
    <string name="sbti_answer_6_5">술집</string>
    <string name="sbti_question_7">좋아하는 주종은 무엇인가요?</string>
    <string name="sbti_answer_7_1">소주</string>
    <string name="sbti_answer_7_2">맥주</string>
    <string name="sbti_answer_7_3">양주</string>
    <string name="sbti_answer_7_4">와인</string>
    <string name="sbti_answer_7_5">술이면 다 OK!</string>
    <string name="sbti_question_8">술을 먹을 때 가장 중요한 것은 무엇인가요?</string>
    <string name="sbti_answer_8_1">술과 안주의 맛</string>
    <string name="sbti_answer_8_2">술집의 분위기</string>
    <string name="sbti_answer_8_3">같이 먹는 친구들</string>
    <string name="sbti_question_9">술은?</string>
    <string name="sbti_answer_9_1">취하려고\n마신다.</string>
    <string name="sbti_answer_9_5">맛으로\n먹는다.</string>
    <string name="sbti_question_10">술이 없는 삶은 어떤 삶인가요?</string>
    <string name="sbti_answer_10_1">있을 수\n없다.</string>
    <string name="sbti_answer_10_5">상관\n없다.</string>
    <string name="sbti_question_11">술의 맛은 어떤가요?</string>
    <string name="sbti_answer_11_1">달다.</string>
    <string name="sbti_answer_11_5">쓰다.</string>
    <string name="navigate_to_sbti_result">결과 확인하기!</string>
    <string name="sbti_brief_default">약간 영화 명대사 느낌으로 두 줄 정도 간략하게 이 유형을 선택하는 부분</string>
    <string name="sbti_brief_challenge">새로운 자극을 찾아 떠난다.\n"새로운 술은 언제나 환영이야!"</string>
    <string name="sbti_brief_home">술은 편한 곳에서 마셔야 한다.\n"마시다가 취하면 자고 일어나서 또마시면 되지!"</string>
    <string name="sbti_brief_only_drink">술만 있으면 만사 OK.\n"분위기가 뭐가 중요해, 술이 중요한거지."</string>
    <string name="sbti_brief_party">술이 만들어내는 분위기를 좋아하는 스타일.\n"그대의 눈동자에 Cheers.."</string>
    <string name="sbti_brief_misik">가장 맛있는 조합만을 추구하는 스타일.\n"술도 음식이야. 맛있어야 한다고."</string>
    <string name="sbti_detailed_default"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_detailed_challenge"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_detailed_home"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_detailed_only_drink"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_detailed_party"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_detailed_misik"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_result_share">공유하기</string>
    <string name="navigate_to_initial">다음 단계로 넘어가기</string>
    <string name="sbti_check_brief_default">약간 영화 명대사 느낌으로 두 줄 정도 간략하게 이 유형을 선택하는 부분</string>
    <string name="sbti_check_brief_challenge">새로운 자극을 찾아 떠난다.\n"새로운 술은 언제나 환영이야!"</string>
    <string name="sbti_check_brief_home">술은 편한 곳에서 마셔야 한다.\n"마시다가 취하면 자고 일어나서 또마시면 되지!"</string>
    <string name="sbti_check_brief_only_drink">술만 있으면 만사 OK.\n"분위기가 뭐가 중요해, 술이 중요한거지."</string>
    <string name="sbti_check_brief_party">술이 만들어내는 분위기를 좋아하는 스타일.\n"그대의 눈동자에 Cheers.."</string>
    <string name="sbti_check_brief_misik">가장 맛있는 조합만을 추구하는 스타일.\n"술도 음식이야. 맛있어야 한다고."</string>
    <string name="sbti_check_detailed_default"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="sbti_check_detailed_challenge"> 이 술로 말할 것 같으면… 제가 LA에 있을 때, 정말 제가 꿈에 무대인 메이저 리그에 진출해서 가는 식당마다 사인해달라 기자들은 항상 붙어 다니며 취재하고  제가 그 머~ 어~ 대통령이 된 기분이었어요. 그런데 17일 만에 마이너 리그로 떨어졌어요. 못 던져서 그만두고 그냥 확 한국으로 가버리고 싶었어요. 그래서 집에 가는 길에 그 맥주 6개 달린 거 있잖아요. 맥주 6개 그걸 사가지고 집으로 갔어요. 그전에는 술 먹으면 야구 못하는 줄 알았어요. 그냥 한국으로 가버릴려구.... 그리고 맥주 6개 먹고 확 죽어버리려고 그랬어요. 야구 못하게 되니깐 그러나 집에 가서 일단은 부모님에게 전화해야겠다고 생각을 했어요. 다음날 가려고 전화를 딱 했는데 어머니께서 찬호야 어후~ 찬호야 아들 잘 있어 밥은 먹고 다니는겨~ 잘 지내는겨 대뜸 그러시는 거에요. 내가 말도 하기도 전에. 그래서 저는 야구 좀 안되지만 잘하고 있다고 여기 사람들 잘 챙겨준다고 라고 거짓말을 했어요. 한국은 못 가게 됐지, 내일 야구장은 가야 하지, 막막하더라고요. 그럼 어떻게 가야 하나 생각을 했어요. 그러고 나서 영어공부를 하게 됐는데요. 영어... 감독한테 이야기를 못 해서 한이 맺힌 거지 그래서 이야기 할려고 한 단어씩 한 문장씩 만들어서 그래서 다음날 써먹었어요. 그리고 감독에게 Hey How are you라고 말했어요. 이렇게 해서 영어공부를 하는 거에요.</string>
    <string name="comb_title">궁합 둘러보기</string>
    <string name="comb_drink_pick">술을 골라주세요!</string>
    <string name="comb_food_pick">안주를 골라주세요!</string>
    <string name="comb_drink_pick_btn">술 고르기</string>
    <string name="comb_food_pick_btn">안주 고르기</string>
    <string name="image_select_title">이미지 선택</string>
    <string name="image_cancel_btn">취소</string>
    <string name="image_upload_btn">이미지 업로드</string>
    <string name="camera_result_manual">직접 입력하기</string>
    <string name="camera_result_drink_again">술 추가 찍기</string>
    <string name="camera_result_food_again">안주 추가 찍기</string>
    <string name="camera_result_no_drink">"직접 추가하기" 또는 "술 추가 찍기" 버튼을 눌러서 술 사진을 찍어주세요!</string>
    <string name="camera_result_no_food">"직접 추가하기" 또는 "안주 추가 찍기" 버튼을 눌러서 안주 사진을 찍어주세요!</string>
</resources>