<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_black_dialog"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_select_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:id="@+id/dialog_image_upload_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:layout_marginVertical="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/dialog_image_cancel_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/image_cancel_btn"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:minHeight="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:backgroundTint="@color/white"/>
        <Button
            android:id="@+id/dialog_image_upload_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/image_upload_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:minHeight="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"/>
    </LinearLayout>
</LinearLayout>
</layout>