<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="cameraViewModel"
            type="com.kud.hanzan.ui.camera.CameraViewModel" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/camera_food_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        visibleGone="@{!cameraViewModel.foodLiveData.empty}"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        visibleGone="@{cameraViewModel.foodLiveData.empty}">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_camera"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/camera_result_no_food"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/camera_drink_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/camera_food_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_result_manual"
            android:textColor="@color/white"
            android:paddingHorizontal="20dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/camera_food_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:paddingHorizontal="20dp"
            android:text="@string/camera_result_food_again"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
</layout>