<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        tools:context=".ui.login.LoginActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_user_profile_IV"
            android:layout_width="105dp"
            android:layout_height="105dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/user_dummy_icon"
            android:background="@drawable/bg_profile_background"/>
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_profile_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintEnd_toEndOf="@id/login_user_profile_IV"
            app:layout_constraintBottom_toBottomOf="@id/login_user_profile_IV"
            android:src="@drawable/bg_profile_change_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintBottom_toTopOf="@id/login_user_name_ET"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="@id/login_user_name_ET"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/login_user_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="240dp"
            android:autofillHints="no"
            android:background="@drawable/bg_white_text_field"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:maxLength="13"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_hint"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/login_user_name_status_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_user_name_ET"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/login_user_name_ET"
            android:layout_marginEnd="4dp"
            android:text=""
            android:textColor="@color/text_negative"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_user_name_ET"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="@id/login_user_name_ET"
            android:layout_marginStart="4dp"
            android:text="@string/user_name_tip"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_age"
            app:layout_constraintBottom_toTopOf="@id/login_user_age_LL"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="@id/login_user_age_LL"
            android:layout_marginStart="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/login_user_age_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="440dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_user_age_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/bg_white_glass_button_small"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/user_age_20"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_user_age_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/bg_white_glass_button_small"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/user_age_30"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_user_age_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/bg_white_glass_button_small"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/user_age_40"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_user_age_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bg_white_glass_button_small"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/user_age_50"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_user_age_60over"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bg_white_glass_button_medium"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/user_age_60over"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/color_main"
            android:text="@string/go_to_SBTI"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>